# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2005-11-25 17:46:41 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-66

    Summary:
      handlers, fix file save (#198)
    Revision:
      itools--main--0.12--patch-66


    modified files:
     Changelog handlers/File.py


2005-11-25 17:28:22 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-65

    Summary:
      uri, now queries accepts non-value parameters (#174)
    Revision:
      itools--main--0.12--patch-65

    For example, "a=2&b" will be parsed as:
    
      {'a': '2', 'b': None}

    modified files:
     Changelog uri/generic.py


2005-11-25 17:15:38 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-64

    Summary:
      schema, avoid some warnings (#176)
    Revision:
      itools--main--0.12--patch-64


    modified files:
     Changelog schemas/registry.py xml/namespaces.py


2005-11-25 15:24:01 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-63

    Summary:
      merge csv code from Piotr
    Revision:
      itools--main--0.12--patch-63

    Patches applied:
    
     * piotr@macuk.pl--public/itools--csv--0.12--patch-7
       merging from the main tree
    
     * piotr@macuk.pl--public/itools--csv--0.12--patch-8
       Search method doc string changed.
    
     * piotr@macuk.pl--public/itools--csv--0.12--patch-9
       Schema and columns as variable of CSV subclass in csv.tex and csv examples
    
     * piotr@macuk.pl--public/itools--csv--0.12--patch-10
       The new search method used in CSV documentation and examples
    
     * piotr@macuk.pl--public/itools--csv--0.12--patch-11
       Using misleading LessOrEqual class in itools.catalog.Query
    
     * piotr@macuk.pl--public/itools--csv--0.12--patch-12
       get_nrows into the API table
    

    modified files:
     Changelog csv/itools_csv.py doc/csv.tex
     doc/examples/csv_handler/example.py
     doc/examples/csv_handler/my_clients.py

    new patches: